# python_app_template

./: README.md  pyproject.toml  scripts.py  setup.cfg
app/tests/: test_helloworld.py
